set color selected color

--- a/app/src/main/res/layout/color_box.xml
+++ b/app/src/main/res/layout/color_box.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp"
     android:gravity="center"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,6 +9,9 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
+       android:padding="5dp"
+       android:background="#BCAEAE"
+       android:layout_marginBottom="20dp"
        android:layout_width="250dp"
        android:layout_height="50dp">
        <TextView
@@ -17,11 +22,11 @@
            android:textSize="25sp"
            android:text="Select color"
            android:layout_width="180dp"
-           android:layout_height="50dp"/>
+           android:layout_height="match_parent"/>
        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            android:layout_width="50dp"
-           android:layout_height="50dp"
+           android:layout_height="match_parent"
            app:cardCornerRadius="25dp"
 
            >
