--- a/app/src/main/res/layout/color_box.xml
+++ b/app/src/main/res/layout/color_box.xml
@@ -10,7 +10,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:padding="5dp"
-       android:background="#BCAEAE"
+       android:background="#B5B5B5"
        android:layout_marginBottom="20dp"
        android:layout_width="250dp"
        android:layout_height="50dp">
