--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:background="#2F000000"
     android:layout_marginTop="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -15,13 +16,13 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/song_img"
-        app:civ_border_width="2dp"
+        app:civ_border_width="1dp"
         app:civ_border_color="#FF000000"/>
 
     <TextView
         android:textStyle="bold"
         android:paddingLeft="15dp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:text="My Music Player"
         android:id="@+id/navigationSubHeaderId"
