--- a/app/src/main/res/layout/my_toolbar.xml
+++ b/app/src/main/res/layout/my_toolbar.xml
@@ -6,6 +6,7 @@
     android:background="#99272525"
     >
     <TextView
+        android:id="@+id/toolBarTextViewId"
         android:gravity="center_vertical"
         android:textColor="#FFFFFF"
         android:textSize="22sp"
