--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -15,6 +15,9 @@
             <item android:id="@+id/contactItemId"
                 android:title="Contact Support"
                 android:icon="@drawable/ic_baseline_contact_support_white"/>
+            <item android:id="@+id/permissionItemId"
+                android:title="App permission "
+                android:icon="@drawable/ic_baseline_perm_device_information_24"/>
             <item android:id="@+id/aboutItemIdId"
                 android:icon="@drawable/ic_baseline_info_white"
                 android:title="About"/>
